# numaflow-python

./: .codecov.yml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  codecov.yml  development.md  pyproject.toml  pytest.ini  releases.md  update_examples.sh  versions.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build-push.yaml  changelog.yml  ci.yml  coverage.yml  lint.yml  pynumaflow-lite.yml  pypi.yaml  run-tests.yml
.hack/: changelog.sh  update_examples.sh
0.11/: index.html  objects.inv  sitemap.xml
0.11/api/: index.html
0.11/search/: search_index.json
0.12/: 404.html  objects.inv  sitemap.xml
0.12/changelog/: index.html
0.12/contributing/: index.html
0.12/search/: search_index.json
docs/: DOCKER_OPTIMIZATION.md
examples/batchmap/: README.md
examples/developer_guide/: Dockerfile  Makefile  README.md  example.py  kafka_sink.md  pipeline-numaflow.yaml  pyproject.toml
examples/function/flatmap/: Dockerfile  Makefile  README.md  example.py  pyproject.toml
examples/function/multiproc_map/: Makefile  README.md  example.py  pipeline.yaml  pyproject.toml  simple.yaml
examples/map/forward_message/: Dockerfile  Makefile  example.py  pipeline-numaflow.yaml  pipeline.yaml  pyproject.toml
examples/mapstream/flatmap_stream/: Dockerfile  Makefile  example.py  pipeline.yaml  pyproject.toml
examples/reduce/: README.md
examples/reduce/asyncio_reduce/: Dockerfile  Makefile  async_exec.py  executorpool.py  pyproject.toml
examples/sideinput/simple-sideinput/udf/: Makefile  example.py  pyproject.toml
examples/source/async-source/: Makefile  example.py  pipeline-numaflow.yaml  pyproject.toml
examples/sourcetransform/async_event_time_filter/: Dockerfile  Makefile  example.py  pyproject.toml
examples/sourcetransform/event_time_filter/: Dockerfile  Makefile  example.py  pyproject.toml
hack/: update_examples.sh
pynumaflow/: .gitignore  __init__.py  _constants.py  datum.py  decoder.py  encoder.py  example.py  exceptions.py  server.py  types.py  udfunction_pb2_grpc.py
pynumaflow-old/: exceptions.py
pynumaflow-old/info/: types.py
pynumaflow-old/mapper/: _dtypes.py
pynumaflow-old/mapstreamer/: __init__.py  _dtypes.py  async_server.py
pynumaflow-old/reducer/: _dtypes.py  async_server.py
pynumaflow-old/sideinput/: __init__.py  _dtypes.py
pynumaflow-old/sinker/: __init__.py  _dtypes.py  async_sink.py
pynumaflow-old/sourcer/: async_server.py
pynumaflow-old/sourcetransformer/: __init__.py
pynumaflow/accumulator/: __init__.py  _dtypes.py  async_server.py
pynumaflow/batchmapper/: __init__.py  _dtypes.py  async_server.py
pynumaflow/errors/: _dtypes.py  errors.py
pynumaflow/function/: __init__.py  _dtypes.py  _multiproc_server.py  _udfunction_pb2.pyi  async_server.py  asynciter.py  handler.py  multiproc_server.py  server.py  sync_server.py  udfunction_pb2.py  udfunction_pb2_grpc.py
pynumaflow/info/: info_server.py  info_types.py  server.py  types.py
pynumaflow/map/: __init__.py  _dtypes.py  async_server.py  multiproc_server.py  server.py
pynumaflow/mapper/: __init__.py  _dtypes.py  async_multiproc_server.py  async_server.py  example.py  map.py  multiproc_server.py  server.py  sync_server.py  test.py  utils.py
pynumaflow/mapstream/: __init__.py  _dtypes.py  async_server.py
pynumaflow/mapstreamer/: __init__.py  _dtypes.py  async_server.py  mapstream.py
pynumaflow/reduce/: __init__.py  _dtypes.py  async_server.py
pynumaflow/reducer/: __init__.py  _dtypes.py  async_server.py  asynciter.py  reduce.py
pynumaflow/reducestreamer/: __init__.py  _dtypes.py  async_server.py
pynumaflow/servingstore/: __init__.py  _dtypes.py  async_server.py  server.py
pynumaflow/shared/: server.py  servicer.py  synciter.py
pynumaflow/sideinput/: __init__.py  _dtypes.py  _udfunction_pb2.pyi  server.py  sideinput.py
pynumaflow/sink/: __init__.py  _dtypes.py  _udfunction_pb2.pyi  async_sink.py  encoder.py  handler.py  server.py  udsink_pb2.py
pynumaflow/sinker/: __init__.py  _dtypes.py  _udfunction_pb2.pyi  async_server.py  async_sink.py  server.py  sink.py
pynumaflow/sourcer/: __init__.py  _dtypes.py  async_server.py  server.py  source.py
pynumaflow/sourcetransform/: __init__.py  _dtypes.py  multiproc_server.py  server.py
pynumaflow/sourcetransformer/: __init__.py  _dtypes.py  async_server.py  multiproc_server.py  server.py  sourcetransform.py
pynumaflow/tests/: __init__.py
pynumaflowgrpc/: _constants.py  encoder.py  example.py  server.py  udfunction_pb2.pyi
pynumaflowgrpc/function/: __init__.py  _dtypes.py  handler.py
pynumaflowgrpc/sink/: __init__.py  _dtypes.py  handler.py
refactor/: __init__.py  _base.py  _constants.py
refactor/mapper/: __init__.py  _dtypes.py  async_server.py  example.py  map.py  server.py
refactor/shared/: server.py
tests/: __init__.py  test_info_server.py  test_shared.py  testing_utils.py
tests/accumulator/: test_async_accumulator.py  test_async_accumulator_err.py  test_datatypes.py  test_debug_watermark.py  test_use_cases.py  utils.py
tests/batchmap/: test_async_batch_map.py  test_async_batch_map_err.py  test_datatypes.py  test_messages.py  utils.py
tests/errors/: test_persist_critical_error.py
tests/function/: test_async_server.py  test_async_server_err.py  test_datatypes.py  test_info_server.py  test_messages.py  test_messagets.py  test_multiproc.py  test_sync_server.py  testing_utils.py
tests/map/: test_async_mapper.py  test_async_multiproc.py  test_messages.py  test_multiproc_mapper.py  test_sync_mapper.py  utils.py
tests/mapbatch/: test_batch_map.py  test_messages.py  utils.py
tests/mapstream/: test_async_map_stream.py  test_async_map_stream_err.py  test_messages.py  utils.py
tests/reduce/: test_async_reduce.py  test_async_reduce_err.py  test_datatypes.py
tests/reducestreamer/: test_async_reduce.py  test_async_reduce_err.py  test_datatypes.py  test_messages.py
tests/servingstore/: test_async_serving_err.py  test_async_serving_store.py  test_async_source.py  test_responses.py  test_serving_store_server.py  (+1 more)
(+330 files in other folders)
