[tool.poetry]
name = "map-forward-message"
version = "0.2.4"
description = ""
authors = ["Numaflow developers"]

[tool.poetry.dependencies]
python = "~3.10"
#pynumaflow = "~0.4.1"
aiorun = "^2022.11.1"
pynumaflow = {git = "https://github.com/numaproj/numaflow-python", rev = "refactor"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
