[tool.poetry]
name = "reduce-counter"
version = "0.2.4"
description = ""
authors = ["Numaflow developers"]

[tool.poetry.dependencies]
python = "~3.10"
pynumaflow = "~0.6.0"
aiorun = "^2022.11.1"
aiohttp = "~3.8.4"
asyncio = "~3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
