[tool.poetry]
name = "simple-source"
version = "0.2.4"
description = ""
authors = ["Numaflow developers"]

[tool.poetry.dependencies]
python = "~3.10"
#pynumaflow = "~0.5.4"
aiorun = "^2023.7"
pynumaflow = {git = "https://github.com/kohlisid/numaflow-python", rev = "bug-fix"}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
