[tool.poetry]
name = "mapt-event-time-filter"
version = "0.2.4"
description = ""
authors = ["Numaflow developers"]
readme = "README.md"
packages = [{include = "mapt_event_time_filter"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pynumaflow = { git = "https://github.com/numaproj/numaflow-python.git", rev = "897ebc49ca3db21bd9eeb91b09c9607e910d6776" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
