[tool.poetry]
name = "mapt-event-time-filter"
version = "0.2.4"
description = ""
authors = ["Numaflow developers"]
readme = "README.md"
packages = [{include = "mapt_event_time_filter"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pynumaflow = {git = "https://github.com/numaproj/numaflow-python.git", rev = "df6afe6a178ff8172757ffd4d612f2965801378d"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
