[tool.poetry]
name = "mapt-event-time-filter"
version = "0.2.4"
description = ""
authors = ["Numaflow developers"]
readme = "README.md"
packages = [{include = "mapt_event_time_filter"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pynumaflow = "~0.7.0a0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
