[tool.poetry]
name = "map-forward-message"
version = "0.2.4"
description = ""
authors = ["Numaflow developers"]

[tool.poetry.dependencies]
python = "~3.10"
pynumaflow = {git = "https://github.com/numaproj/numaflow-python.git", rev = "df6afe6a178ff8172757ffd4d612f2965801378d"}
watchfiles = "~0.20.0"
watchdog = "~0.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
